# basicCtrl

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  PHASE-4-DEMO.md  PHASE-5-DEMO.md  PHASE-6-DEMO.md  Package.swift  README.md  pyproject.toml
.claude/: ralph-loop.local.md  settings.json
.planning/: INTEGRATION-DEBUG.md  MILESTONE-V1.0.md  PROJECT.md  RALPH-HANDOFF.md  RALPH-ITERATION-HANDOFF.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  ULTRAPLAN.md  config.json
.planning/agent-reports/: AGENT-A-OBSERVABILITY.md  AGENT-B-E2E-GATES.md
.planning/research/: ARCHITECTURE.md  BROWSER-HARNESS-DEEP-STUDY.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/scripts/: ralph-stop-hook.sh
basicctrl/: __init__.py  log.py
basicctrl/actions/: __init__.py  channel_registry.py  duplicate_receipt.py  idempotency.py  race_orchestrator.py
basicctrl/agents/: __init__.py  chess_player.py  embedder.py  learning_loop.py
basicctrl/ax/: __init__.py  element.py  errors.py  modal_probe.py  observer.py  rate_limit.py  walker.py  window_manager.py
basicctrl/browser/: admin.py  daemon.py  electron.py  form_fill.py  helpers.py  keystroke_heal.py
basicctrl/cache/: __init__.py  agent_cache.py  cassette.py  replay.py  writeback.py
basicctrl/cognition/: __init__.py  apple_fm.py  critic.py  ensemble.py  exceptions.py  grounder.py  planner.py  sampling_planner.py  schemas.py  speculative.py  verifier_llm.py
basicctrl/demo/: __init__.py  calculator_click.py
cua_overlay/: __init__.py  log.py
scripts/: calendar_add_event.py  chess_autoplayer.py  chess_vs_apple.py  cross_app_demo.py  cua-monitor  cua-trace  doctor.py  init_postgres.py  init_postgres.sh  install.sh  preflight.sh  smoke.sh  verify-everything.sh
tests/: conftest.py  test_durability.py  test_profile_spi.py  test_replay.py  test_session_diff.py  test_spi_ax_remote.py  test_spi_dyld.py  test_spi_imu.py  test_spi_integration.py  test_spi_probes.py  test_spi_skylight.py  test_spi_tier_b.py  test_spi_webkit.py  test_visualizer.py
(+498 files in other folders)
