[project]
name = "cua-maximalist"
version = "0.1.0"
description = "Self-healing autonomous Mac CU framework"
requires-python = ">=3.12,<3.13"
dependencies = [
  "pyobjc==12.1",
  "structlog==25.5.0",
  "pydantic>=2.0",
  "anyio>=4.0",
  "httpx>=0.27",
  "rich",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-x --tb=short"
markers = [
  "integration: requires real macOS apps (Calculator, etc.)",
  "manual: requires human interaction (TCC toggle, modal dialog)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
