[project]
name = "cua-maximalist"
version = "0.1.0"
description = "Self-healing autonomous Mac CU framework"
requires-python = ">=3.12"
dependencies = [
  "pyobjc==12.1",
  "ocrmac==1.0.1",
  "ImageHash==4.3.2",
  "Pillow",
  "structlog==25.5.0",
  "langgraph-checkpoint-postgres==3.0.5",
  "psycopg[binary]>=3.1",
  "pydantic>=2.0",
  "anyio>=4.0",
  "mcp",
  "httpx>=0.27",
  "rich",
  "cdp-use==1.4.5",
  "py-applescript==1.0.3",
  "transformers>=5.0.0",
  "uitag==0.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.0",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cua_overlay"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-x --tb=short"
markers = [
  "integration: requires real macOS apps (Calculator, etc.)",
  "manual: requires human interaction (TCC toggle, modal dialog)",
  "stress: 100+ iteration stress tests (idempotency, race fuzzing)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
